--- a/mastermindgame/src/App.css
+++ b/mastermindgame/src/App.css
@@ -41,3 +41,10 @@ header {
   right: 10px;
   left: 10px;
 }
+
+.circle {
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 50%;
+}
