--- a/mastermindgame/src/App.css
+++ b/mastermindgame/src/App.css
@@ -37,6 +37,8 @@ header {
 
 .coloredButton {
   position: absolute;
+  /* height: 10px; */
+  /* width: 50px; */
   bottom: 10px;
   right: 10px;
   left: 10px;
@@ -47,4 +49,27 @@ header {
   width: 50px;
   background-color: red;
   border-radius: 50%;
+}
+
+.buttons {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #04aa6d;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+/* .buttons:hover {
+  background-color: #3e8e41;
+} */
+
+.buttons:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
